Break reference cycle in ErrorEvent by using JSValueInWrappedObject https://bugs.webkit.org/show_bug.cgi?id=188491

Reviewed by Darin Adler.

Source/WebCore:

ErrorEvent should not use Strong<Unkonwn> to hold error JSValue. This patch integrates
JSValueInWrappedObject into ErrorEvent.

* Modules/webvr/VRDisplayEvent.h:
Fix unified build errors due to added JSErrorEventCustom.cpp. It changes the files grouped in unified build.

* Sources.txt:
* WebCore.xcodeproj/project.pbxproj:
* bindings/js/JSErrorEventCustom.cpp: Copied from Source/WebCore/Modules/webvr/VRDisplayEvent.h.
(WebCore::JSErrorEvent::visitAdditionalChildren):
Add custom mark function for JSValueInWrappedObject.

* bindings/js/JSEventListener.h:
* bindings/js/WindowProxy.cpp:
Fix unified build errors due to added JSErrorEventCustom.cpp. It changes the files grouped in unified build.

* dom/ErrorEvent.cpp:
(WebCore::ErrorEvent::ErrorEvent):
(WebCore::ErrorEvent::error):
(WebCore::ErrorEvent::trySerializeError):
Align the implementation to PushStateEvent::trySerializeState.

* dom/ErrorEvent.h:
* dom/ErrorEvent.idl:

LayoutTests:

* fast/dom/reference-cycle-leaks-expected.txt:

Canonical link: https://commits.webkit.org/203592@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234789 268f45cc-cd09-0410-ab3c-d52691b4dbfc