Source/WebCore/bindings/js/JSErrorEventCustom.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2017-2018 Igalia S.L. All rights reserved.
+ * Copyright (C) 2018 Yusuke Suzuki <yusukesuzuki@slowstart.org>.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -22,45 +22,15 @@
  * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF
  * THE POSSIBILITY OF SUCH DAMAGE.
  */
-#pragma once
 
-#include "Event.h"
-#include "VRDisplay.h"
-#include "VRDisplayEventReason.h"
+#include "config.h"
+#include "JSErrorEvent.h"
 
 namespace WebCore {
 
-class VRDisplayEvent final : public Event {
-public:
-    static Ref<VRDisplayEvent> create(const AtomicString& type, const RefPtr<VRDisplay>& display, std::optional<VRDisplayEventReason>&& reason)
-    {
-        return adoptRef(*new VRDisplayEvent(type, display, WTFMove(reason)));
-    }
-
-    struct Init : EventInit {
-        RefPtr<VRDisplay> display;
-        std::optional<VRDisplayEventReason> reason;
-    };
-
-    static Ref<VRDisplayEvent> create(const AtomicString& type, const Init& initializer, IsTrusted isTrusted = IsTrusted::No)
-    {
-        return adoptRef(*new VRDisplayEvent(type, initializer, isTrusted));
-    }
-
-    virtual ~VRDisplayEvent();
-
-    RefPtr<VRDisplay> display() const { return m_display; }
-    const std::optional<VRDisplayEventReason>& reason() const { return m_reason; }
-
-private:
-    VRDisplayEvent(const AtomicString&, const Init&, IsTrusted);
-    VRDisplayEvent(const AtomicString&, const RefPtr<VRDisplay>&, std::optional<VRDisplayEventReason>&&);
-
-    // Event
-    EventInterface eventInterface() const override;
-
-    RefPtr<VRDisplay> m_display;
-    std::optional<VRDisplayEventReason> m_reason;
-};
+void JSErrorEvent::visitAdditionalChildren(JSC::SlotVisitor& visitor)
+{
+    wrapped().originalError().visit(visitor);
+}
 
 } // namespace WebCore
