Source/WebCore/bindings/js/JSEventListener.h
@@ -32,6 +32,7 @@
 namespace WebCore {
 
 class DOMWindow;
+class Document;
 class EventTarget;
 class HTMLElement;
 
