Source/WebCore/dom/ErrorEvent.h
@@ -32,6 +32,7 @@
 #pragma once
 
 #include "Event.h"
+#include "JSValueInWrappedObject.h"
 #include "SerializedScriptValue.h"
 #include <JavaScriptCore/Strong.h>
 #include <wtf/text/WTFString.h>
@@ -53,9 +54,9 @@ public:
         JSC::JSValue error;
     };
 
-    static Ref<ErrorEvent> create(JSC::ExecState& state, const AtomicString& type, const Init& initializer, IsTrusted isTrusted = IsTrusted::No)
+    static Ref<ErrorEvent> create(const AtomicString& type, const Init& initializer, IsTrusted isTrusted = IsTrusted::No)
     {
-        return adoptRef(*new ErrorEvent(state, type, initializer, isTrusted));
+        return adoptRef(*new ErrorEvent(type, initializer, isTrusted));
     }
 
     virtual ~ErrorEvent();
@@ -66,13 +67,16 @@ public:
     unsigned colno() const { return m_columnNumber; }
     JSC::JSValue error(JSC::ExecState&, JSC::JSGlobalObject&);
 
+    const JSValueInWrappedObject& originalError() const { return m_error; }
+    SerializedScriptValue* serializedError() const { return m_serializedError.get(); }
+
     EventInterface eventInterface() const override;
+
+    RefPtr<SerializedScriptValue> trySerializeError(JSC::ExecState&);
 
 private:
     ErrorEvent(const String& message, const String& fileName, unsigned lineNumber, unsigned columnNumber, JSC::Strong<JSC::Unknown> error);
-    ErrorEvent(JSC::ExecState&, const AtomicString&, const Init&, IsTrusted);
-
-    RefPtr<SerializedScriptValue> trySerializeError(JSC::ExecState&);
+    ErrorEvent(const AtomicString&, const Init&, IsTrusted);
 
     bool isErrorEvent() const override;
 
@@ -80,10 +84,8 @@ private:
     String m_fileName;
     unsigned m_lineNumber;
     unsigned m_columnNumber;
-    // FIXME: The following use of JSC::Strong is incorrect and can lead to storage leaks
-    // due to reference cycles; we should use JSValueInWrappedObject instead.
-    JSC::Strong<JSC::Unknown> m_error;
-    RefPtr<SerializedScriptValue> m_serializedDetail;
+    JSValueInWrappedObject m_error;
+    RefPtr<SerializedScriptValue> m_serializedError;
     bool m_triedToSerialize { false };
 };
 
